data/derived/sp14/progs/unify/prog3194.ml.out
Characters 239-254:
  removeZero (add (padZero l1 l2));;
                  ^^^^^^^^^^^^^^^
Error: This expression has type int list * int list
       but an expression was expected of type int * ('a list * 'b list) list
       Type int list is not compatible with type int 
